--- a/inventory/group_vars/prom/prometheus.yml
+++ b/inventory/group_vars/prom/prometheus.yml
@@ -148,6 +148,16 @@ __extra_prometheus_scrape_configs:
           __param_target: "{{ hostvars['theia'].host_ips.ipmi }}"
           __param_module: "theia"
 
+  - job_name: "nut"
+    metrics_path: /ups_metrics
+    scrape_interval: 1m
+    static_configs:
+      - targets: ["{{ hostvars['oldpi'].ansible_host }}:9199"]
+        labels:
+          instance: "oldpi"
+          ups: "apc"
+          __param_ups: "apc"
+
   - job_name: "mktxp"
     scrape_interval: 5m
     static_configs:
