Remove Atla, Nari and Nott
- Remove vPro VLAN as it was only needed by the thinkcentres
- Remove VMs which ran on the removed hosts

--- a/inventory/host_vars/crs309/ports.yml
+++ b/inventory/host_vars/crs309/ports.yml
@@ -2,11 +2,10 @@
 
 host_exclude_nets:
   - public
-  - vpro
 
 mt_trunk_ports: [
   sfp-sfpplus1, sfp-sfpplus2, sfp-sfpplus3, sfp-sfpplus4,
-  sfp-sfpplus5, sfp-sfpplus6, sfp-sfpplus7, sfp-sfpplus8,
+  sfp-sfpplus5,
 ]
 
 mt_access_ports:
