Enable AMT SOL console
Also remove intel_gvt_enabled flags from grub, they're unused and can be replaced with the new grub_cmdline_group var anyway.

--- a/inventory/group_vars/ms01/vpro.yml
+++ b/inventory/group_vars/ms01/vpro.yml
@@ -6,3 +6,5 @@ __host_ips_3:
 __mt_dns_entries_host:
   - name: "{{ inventory_hostname }}.vpro.{{ domains['hb'] }}"
     address: "{{ host_ips.vpro }}"
+
+grub_cmdline_group: "console=tty0 console=ttyS4,115200n8"
