Initial debootstrap playbook

--- a/roles/systemd_cryptenroll/handlers/main.yml
+++ b/roles/systemd_cryptenroll/handlers/main.yml
@@ -3,3 +3,4 @@
 - name: Dracut regenerate
   listen: Regenerate initramfs
   ansible.builtin.command: dracut -f --regenerate-all
+  when: not chroot_path | default('')
