--- a/roles/grub/handlers/main.yml
+++ b/roles/grub/handlers/main.yml
@@ -1,5 +1,14 @@
 ---
 
-- name: Regenerate grub
+- name: Regenerate grub [RedHat]
+  listen: Regenerate grub
   ansible.builtin.command: "grub2-mkconfig -o {{ grub_cfg_path }}"
-  when: "grub_cfg_path is defined"
+  when:
+    - "grub_cfg_path is defined"
+    - ansible_os_family == 'RedHat'
+
+- name: Regenerate grub [Debian]
+  listen: Regenerate grub
+  ansible.builtin.command: "update-grub"
+  when:
+    - ansible_os_family == 'Debian'
