--- a/inventory/host_vars/litr/firewall.yml
+++ b/inventory/host_vars/litr/firewall.yml
@@ -1,20 +1,15 @@
 ---
 
-__ssh_sources:
-  - "{{ wg_net.mt.cidr }}"
-  - "{{ home_net | json_query('*.cidr') }}"
+firewalld_zones:
+  - name: public
+    interfaces: "{{ host_nic_names }}"
+
+firewalld_services:
+  - name: ssh
 
 firewall_rules:
-  - port: 22
-    sources: "{{ __ssh_sources | flatten }}"
-
   - port: "{{ (serial_proxies | selectattr('name', 'eq', 'pwr') | first).port }}"
     source: "{{ hostvars['ha'].ansible_host }}"
-
-  # RouterOS neighbour discovery
-  - port: 5678
-    source: "fe80::/64"
-    protocol: "udp"
 
   # NUT
   - port: 3493
