--- a/inventory/group_vars/prom/prometheus.yml
+++ b/inventory/group_vars/prom/prometheus.yml
@@ -152,9 +152,9 @@ __extra_prometheus_scrape_configs:
     metrics_path: /ups_metrics
     scrape_interval: 1m
     static_configs:
-      - targets: ["{{ hostvars['oldpi'].ansible_host }}:9199"]
+      - targets: ["{{ hostvars['litr'].ansible_host }}:9199"]
         labels:
-          instance: "oldpi"
+          instance: "litr"
           ups: "apc"
           __param_ups: "apc"
 
