Debian HV fixes
- Use file type for libvirt due to bug in virt-aa-helper
    https://bugs.launchpad.net/ubuntu/+source/libvirt/+bug/1677398
- Move aegir and gerd to Debian
- Add podman to common packages
- Add ifupdown to blocked debian packages
- Add video and render groups to my user
- Use AppArmor security model if not on Theia
- Disable cryptenroll_crypttab_link by default
- Install common packages later in an attempt to block first on Debian

--- a/inventory/group_vars/kvm_hv/vars.yml
+++ b/inventory/group_vars/kvm_hv/vars.yml
@@ -59,6 +59,7 @@ common_packages:
   - patch
   - pciutils
   - pkgconf
+  - podman
   - powertop
   - python3-lxml  # virt ansible modules
   - rsync
