--- a/inventory/group_vars/ms01/debian.yml
+++ b/inventory/group_vars/ms01/debian.yml
@@ -1,4 +1,5 @@
 ---
 
-# 6.7 freezes on boot
+btrfs_src: "LABEL=DEBIAN-BTRFS"
+# 6.7 freezes on boot when first installing
 deb_backports_kernel: false
