Disable cryptenroll_crypttab_config for all hv's

--- a/inventory/group_vars/kvm_hv/cryptenroll.yml
+++ b/inventory/group_vars/kvm_hv/cryptenroll.yml
@@ -2,3 +2,5 @@
 
 luks_root_disk: /dev/nvme0n1p3
 luks_root_disk_password: "{{ vault_luks_root_disk_password }}"
+
+cryptenroll_crypttab_config: false
