Switch to hifis.toolkit.unattended_upgrades

--- a/inventory/group_vars/ceph/vars.yml
+++ b/inventory/group_vars/ceph/vars.yml
@@ -8,6 +8,11 @@ __dnf_automatic_excludes_4:
   - "podman*"
   - "container*"
 
+__unattended_package_blacklist_4:
+  - "podman*"
+  - "container*"
+  - "crun*"
+
 __mt_dns_entries_vip:
   - name: "rgw.{{ domain }}"
     address: "{{ rgw_ingress_vip | ansible.utils.ipaddr('address') }}"
