--- a/inventory/group_vars/kvm_hv/vars.yml
+++ b/inventory/group_vars/kvm_hv/vars.yml
@@ -25,6 +25,11 @@ __dnf_automatic_excludes_3:
   - "libvirt*"
   - "qemu*"
 
+__unattended_package_blacklist_3: "{{ __dnf_automatic_excludes_3 }}"
+unattended_mail: "{{ my_email }}"
+unattended_mail_report: "only-on-error"
+unattended_mail_sender: "{{ inventory_hostname }}@{{ domains['hb'] }}"
+
 intel_gvt_enabled: false
 
 # Remove once all hosts are expected to be up all the time
